--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
         <section id="schedule">
             <h2>Schedule a Walk</h2>
             <p>Use the calendar below to book a time that works for you.</p>
-            <div class="cal-embed"></div>
+            <iframe
+  id="inlineFrameExample"
+  title="Inline Frame Example"
+  width="300"
+  height="200"
+  src="https://cal.com/flench04/dogwalk1">
+</iframe>
         </section>
     </main>
 
