--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <iframe
   id="inlineFrameExample"
   title="Inline Frame Example"
-  width="300"
-  height="200"
+  width="100%"
+  height="500"
   src="https://cal.com/flench04/dogwalk1">
 </iframe>
         </section>
