--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   title="Inline Frame Example"
   width="100%"
   height="700"
-  src="https://cal.com/flench04/dogwalk1">
+  src="https://cal.com/flench04">
 </iframe>
         </section>
     </main>
@@ -87,13 +87,5 @@
     <footer>
         <p>&copy; 2025 Paws</p>
     </footer>
-    <script type="text/javascript">(function (C, A, L) { let S = A.createElement(L), E = A.getElementsByTagName(L)[0]; S.type = "text/javascript"; S.async = true; S.src = "https://app.cal.com/embed/embed.js"; E.parentNode.insertBefore(S, E); })(window, document, "script");</script>
-    <script>
-      Cal("inline", {
-        elementOrSelector: ".cal-embed",
-        calLink: "flench04/dogwalk1"
-      });
-      Cal("ui", {"styles":{"branding":{"brandColor":"#000000"}},"hideEventTypeDetails":false,"layout":"month_view"});
-    </script>
 </body>
 </html>
