--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h2>About Me</h2>
             <div class="about-container">
                 <div class="about-me">
-                    <img src="https://via.placeholder.com/150" alt="My Photo" id="my-photo">
+                    <img src="assets/self.jpg" alt="My Photo" id="my-photo">
                     <p>Hi, I'm fundraising for my trip to SEEK2026! I love dogs and would be happy to take your furry friend for a walk.</p>
                 </div>
                 <div class="about-dog">
-                    <img src="https://via.placeholder.com/150" alt="My Dog" id="dog-photo">
+                    <img src="assets/" alt="My Dog" id="dog-photo">
                     <p>This is my dog! He's the best boy.</p>
                 </div>
             </div>
