--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Hi, I'm fundraising for my trip to SEEK2026! I love dogs and would be happy to take your furry friend for a walk.</p>
                 </div>
                 <div class="about-dog">
-                    <img src="assets/" alt="My Dog" id="dog-photo">
+                    <img src="assets/dog.jpg" alt="My Dog" id="dog-photo">
                     <p>This is my dog! He's the best boy.</p>
                 </div>
             </div>
