--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <section id="title-card">
             <h1>Paws</h1>
             <p>Fundraising for SEEK2026</p>
+                    <div class="header-buttons">
+
+                        <a href="https://cal.com/flench04" class="button booking-button" target="_blank">Book Now</a>
+                    </div>
+
         </section>
 
         <!-- Section: About Me -->
