--- a/new-client-promotion.html
+++ b/new-client-promotion.html
@@ -10,6 +10,11 @@
     <link rel="icon" href="assets/main-logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    .main-container {
+        flex-direction: column !important;
+    }
+</style>
 <body>
 
     <!-- Sticky Header -->
