--- a/new-client-promotion.html
+++ b/new-client-promotion.html
@@ -32,7 +32,7 @@
 
     <!-- Main content container -->
     <main>
-
+        <div class="main-container">
         <!-- Section: Title Card -->
         <section id="title-card">
             <div class="title-card-text">
@@ -53,7 +53,7 @@
             <p>This offer is valid for new clients only and applies to the first walk scheduled on a weekday (Monday-Friday). Please mention this promotion when booking.</p>
             <a href="https://cal.com/flench04" class="button booking-button" style="margin-top: 1rem;">Book Your First Walk!</a>
         </section>
-
+        </div>
     </main>
 
     <!-- Footer -->
