--- a/new-client-promotion.html
+++ b/new-client-promotion.html
@@ -16,6 +16,7 @@
     <!-- Favicon and stylesheet links -->
     <link rel="icon" href="assets/main-logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="0653e2e5-fc92-4f7c-a1ad-32f0136f6801"></script>
 </head>
 <style>
     .main-container {
